# hello_world_stm8

./: .gitignore  CMakeLists.txt  STM8Toolchain.cmake  bugurt_config.h  delay.c  delay.h  main.c  stm8s_conf.h  stm8s_it.c  stm8s_it.h
cmake/: AdjustAR.cmake  LinkerMapParser.cmake  STM8Toolchain.cmake  stm8flash.cmake  stm8size.cmake
